--- a/(2020) Plagiarism/04. Bomber.md
+++ b/(2020) Plagiarism/04. Bomber.md
@@ -1,3 +1,6 @@
+```dataviewjs
+await dv.view('_script');
+```
 爆弾魔 | Bakudanma **Re-Recording**
 #### Lyrics
 EJ/Bluepenguin translation [[03. Compulsive Bomber]]
